# ml_ops_itmo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.airflow  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
airflow/: Dockerfile  airflow_template.yml
airflow/dags/: first_example.py
airflow/promtail/: config.yml
api/: config.yaml  main.py  send_requests.py
dags/: titanic_dag.py
dags/scripts/: prep_data.py  testing.py  train.py
data/processed/: .gitignore  test_fe.csv.dvc  test_simple.csv.dvc  train_fe.csv.dvc  train_simple.csv.dvc
data/raw/: .gitignore
models/: .gitignore  logreg_fe.pkl.dvc  logreg_simple.pkl.dvc  mlp_fe.pkl.dvc  mlp_simple.pkl.dvc  rf_fe.pkl.dvc  rf_simple.pkl.dvc
monitoring/prometheus/: prometheus.yml
results/: api_benchmark.csv  metrics.csv.dvc
scripts/: testing.py  train.py
titanic/: train.py
