[project]
name = "titanic"
version = "0.1.0"
description = ""
authors = [
    {name = "neordic",email = "nmuraveva08@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2,<3.0.0",
    "scikit-learn>=1.5.2,<2.0.0",
    "dvc[gdrive] (>=3.63.0,<4.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "cryptography (>=46.0.1,<47.0.0)",
    "certifi (>=2025.8.3,<2026.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "pyopenssl (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
pre-commit = "^4.3.0"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"   # или "py311" под твою версию
exclude = [".venv", ".git", "dist", "build", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
