[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["neordic <nmuraveva08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
dvc = {version = "^3.63.0", extras = ["http"]}
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
cryptography = "^43.0.0"
certifi = "^2024.8.30"
urllib3 = "^2.2.2"
pyopenssl = "^24.2.1"
mlflow = "^3.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
